--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="mb-3">
     <label for="exampleInputEmail1" class="form-label">Roll NO</label>
     <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="rollNo">
-    <div id="emailHelp" class="form-text">We'll never share your rollNo with anyone else.</div>
+    <div id="emailHelp" class="form-text">Enter either Roll number or register number to get the name of person.</div>
     </div>
     <div class="mb-3">
     <label for="exampleInputPassword1" class="form-label">Reg NO</label>
